[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "payment-api-testing-framework"
version = "3.0.0"
description = "Comprehensive Payment API Testing Framework with Web Interface"
authors = [
    {name = "Payment Testing Team"},
]
dependencies = [
    "pandas>=1.5.0",
    "requests>=2.28.0",
    "acquiring-sdk-python>=1.3.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."
